--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,5 +127,7 @@ Stations of the Cross/കുരിശിന്റെ സ്റ്റേഷനു
     <string name="title_activity_new_york_locations">Map</string>
     <string name="title_activity_philadeplhia_locations">Map</string>
     <string name="title_activity_mary_land_locations">Map</string>
+    <string name="title_activity_texas_location">Map</string>
+    <string name="title_activity_michigan_location">Map</string>
 
 </resources>
